SFDEV/force-app/main/default/objects/Expense_Management__c/Expense_Management__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Expense Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>