SFDEV/force-app/main/default/objects/Expense_Management__c/fields/Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>Amount_Spent__c</fullName>
    <description>Amount spent</description>
    <label>Amount Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>