SFDEV/force-app/main/default/objects/Expense_Management__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <description>Bill number of expense</description>
    <label>Bill Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>