SFDEV/force-app/main/default/objects/Expense_Management__c/fields/Date_Of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Expense__c</fullName>
    <description>Date</description>
    <label>Date Of Expense</label>
    <type>Date</type>
</CustomField>