SFDEV/force-app/main/default/objects/Expense_Management__c/fields/Distance_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled__c</fullName>
    <description>Total distance travelled</description>
    <label>Distance Travelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>