SFDEV/force-app/main/default/objects/Expense_Management__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <description>Expense categories</description>
    <label>Expense Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>