SFDEV/force-app/main/default/objects/Expense_Management__c/fields/gf__c.field-meta.xml
<CustomField>
    <fullName>gf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>