SFDEV/force-app/main/default/objects/Expense_Management__c/fields/Reimbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Amount__c</fullName>
    <description>Amount to be reimburse.</description>
    <formula>Distance_Travelled__c  * 10</formula>
    <label>Reimbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>