SFDEV/force-app/main/default/objects/Expense_Management__c/recordTypes/Food.recordType-meta.xml
<RecordType>
    <fullName>Food</fullName>
    <active>false</active>
    <label>Food</label>
</RecordType>