SFDEV/force-app/main/default/objects/Expense_Management__c/recordTypes/Foods.recordType-meta.xml
<RecordType>
    <fullName>Foods</fullName>
    <active>true</active>
    <label>Foods</label>
</RecordType>