SFDEV/force-app/main/default/objects/Expense_Management__c/recordTypes/Lodging.recordType-meta.xml
<RecordType>
    <fullName>Lodging</fullName>
    <active>true</active>
    <label>Lodging</label>
</RecordType>